fixed text color to orange to be more readable

--- a/public/main.css
+++ b/public/main.css
@@ -24,7 +24,7 @@ body {
 }
 
 .topnav a {
-  color: #f2f2f2;
+  color: orange;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -60,35 +60,25 @@ body {
 }
 
 .logo-text h1 {
-  /* position: fixed; */
   font-size: 120px;
-  color: white;
+  color: orange;
   text-shadow: 2px 2px black;
 }
 
 .logo-text h2 {
-  /* position: fixed; */
   font-size: 70px;
-  color: white;
+  color: orange;
   text-shadow: 2px 2px black;
 }
-
-/* .sublogo-text h2 {
-  position: fixed;
-  font-size: 100px;
-  color: white;
-  text-shadow: 2px 2px black; */
 
 .footernav {
     position: static;
     background-color: #333;
     width: 100%;
-    /* text-align: center; */
-    /* bottom: 0; */
 }
 
 .footernav ul, a {
-  color: white;
+  color: orange;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -102,7 +92,7 @@ body {
 }
 
 #boxstyle {
-  color: white;
+  color: orange;
   text-align: left;
 
 }
